# MiniR1_sogmgm_ver

./: .gitignore  A40_OPTIMIZATION.md  FIX_SUMMARY.md  PROGRESS.md  QUICKSTART.md  README.md  RUNPOD_SETUP.md  TENSORBOARD_GUIDE.md  base_model_output.txt  pyproject.toml  runpod_restart_guide.txt  test_base_model.py  test_tokenizer_debug.py
configs/: training_config.yaml
scripts/: analyze_tensorboard.py  check_environment.py  dataset_prep.py  evaluate.py  read_tensorboard.py  rewards.py  test_generation_full.py  test_rewards.py  train_grpo.py
