[project]
name = "minir1"
version = "0.1.0"
description = "Mini-R1: Reproduce DeepSeek R1 aha moment with GRPO on RunPod"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Core ML libraries
    "transformers>=4.48.0",
    "datasets>=3.1.0",
    "accelerate>=1.3.0",
    "trl>=0.14.0",
    
    # Model optimization
    "peft>=0.14.0",
    "bitsandbytes>=0.45.0",
    
    # Utilities
    "huggingface-hub>=0.26.0",
    "safetensors>=0.4.0",
    
    # Data processing
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    
    # Logging & monitoring
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.7.0",
]

flash-attn = [
    "flash-attn>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV specific configurations
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
# PyTorch with CUDA 12.1 support
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

# Install commands reference:
# uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
# uv pip install flash-attn --no-build-isolation
# uv pip install -e .
