[project]
name = "minir1"
version = "0.1.0"
description = "Mini-R1: Reproduce DeepSeek R1 aha moment with GRPO on RunPod"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Core ML libraries
    "transformers>=4.48.0",
    "datasets>=3.1.0",
    "accelerate>=1.3.0",
    "trl>=0.14.0",
    
    # Model optimization
    "peft>=0.14.0",
    "bitsandbytes>=0.45.0",
    
    # Utilities
    "huggingface-hub>=0.26.0",
    "hf-transfer>=0.1.8",
    "safetensors>=0.4.0",
    
    # Data processing
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "requests>=2.32.2",
    
    # Logging & monitoring
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.7.0",
]

flash-attn = [
    "flash-attn>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch build configuration
[tool.hatch.build.targets.wheel]
packages = ["scripts"]
only-include = ["scripts", "configs"]

[tool.hatch.build.targets.sdist]
include = [
    "scripts/",
    "configs/",
    "README.md",
    "RUNPOD_SETUP.md",
    "TENSORBOARD_GUIDE.md",
    "PROGRESS.md",
    "pyproject.toml",
]

# ============================================
# UV 사용 가이드 (RunPod)
# ============================================
# 
# 1. 의존성 설치 (프로젝트 빌드 제외):
#    uv sync --no-install-project
#
# 2. PyTorch 설치 (CUDA 12.1):
#    uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
#
# 3. Flash Attention (선택, 5-10분 소요):
#    uv pip install flash-attn --no-build-isolation
#
# 4. 실행:
#    uv run python scripts/train_grpo.py --config configs/training_config.yaml
#
# 상세 가이드: RUNPOD_SETUP.md

